<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/weather_info">

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:contentDescription="@string/weather_info_image"
        android:gravity="center"
        android:scaleType="fitXY" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/shortDescriptionIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:layout_toEndOf="@id/weatherIcon"
        android:layout_toRightOf="@id/weatherIcon"
        android:gravity="center"
        android:text="@string/short_description"
        android:textSize="32sp"/>

    <TableLayout
        android:id="@+id/weatherTable"
        android:layout_below="@id/weatherIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TableRow>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/temperature"
                android:textSize="22sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/countryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="100"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </TableRow>

        <TableRow>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/pressure"
                android:textSize="22sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/pressureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="100"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </TableRow>

        <TableRow>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/wind_speed"
                android:textSize="22sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/humidityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="100"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </TableRow>
    </TableLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/openPageButton"
        android:layout_below="@id/weatherTable"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/open_web_page" />
</RelativeLayout>